Safari inline-block elements align issue resloved

--- a/styles/main.css
+++ b/styles/main.css
@@ -453,6 +453,7 @@ textarea#details {
     display: inline-block;
     width: 260px;
     height: 340px;
+    vertical-align: top;
 }
 .expert-info-wrapper {
     position: relative;
